--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -12,5 +12,5 @@
 .firstbutton,
 .secondbutton {
   font-size: 28px;
-  font-family: "Helvetica", "Times New Roman", sans serif;
+  font-family: "Helvetica", "Times New Roman", sans-serif;
 }
